objects/User_Distributor__c.object
<CustomObject>
    <fields>
        <fullName>Comm_Dist__c</fullName>
        <label>Comm Dist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>163</fullName>
                </value>
                <value>
                    <fullName>169</fullName>
                </value>
                <value>
                    <fullName>203</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>266</fullName>
                </value>
                <value>
                    <fullName>269</fullName>
                </value>
                <value>
                    <fullName>280</fullName>
                </value>
                <value>
                    <fullName>326</fullName>
                </value>
                <value>
                    <fullName>328</fullName>
                </value>
                <value>
                    <fullName>370</fullName>
                </value>
                <value>
                    <fullName>374</fullName>
                </value>
                <value>
                    <fullName>420</fullName>
                </value>
                <value>
                    <fullName>444</fullName>
                </value>
                <value>
                    <fullName>455</fullName>
                </value>
                <value>
                    <fullName>486</fullName>
                </value>
                <value>
                    <fullName>487</fullName>
                </value>
                <value>
                    <fullName>492</fullName>
                </value>
                <value>
                    <fullName>495</fullName>
                </value>
                <value>
                    <fullName>502</fullName>
                </value>
                <value>
                    <fullName>571</fullName>
                </value>
                <value>
                    <fullName>580</fullName>
                </value>
                <value>
                    <fullName>692</fullName>
                </value>
                <value>
                    <fullName>699</fullName>
                </value>
                <value>
                    <fullName>801</fullName>
                </value>
                <value>
                    <fullName>9810</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The commercial distributor head office account</description>
        <inlineHelpText>The commercial distributor this user is accosiated</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Distributor</relationshipLabel>
        <relationshipName>User_Distributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toro_CML_DSM_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DSM that covers the distributor - for use on the CPQ approval process</description>
        <inlineHelpText>Who is the CML DSM that is assigned to the distributor</inlineHelpText>
        <label>Toro CML DSM Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Distributor1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user table</description>
        <inlineHelpText>Select the user that will be tied to the distributor</inlineHelpText>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Distributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Distributor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Name__c</columns>
        <columns>Distributor__c</columns>
        <columns>Comm_Dist__c</columns>
        <columns>Toro_CML_DSM_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>User Distributor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Distributor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>